--- a/code/analysis/wildtype_expression_profiles.ipynb
+++ b/code/analysis/wildtype_expression_profiles.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set up the  dictionary of genes we care about. \n",
+    "genes = {'flh':['flhD', 'flhC', 'flgA', 'flgM', 'flgN', 'flgB', 'flgC', 'flgD', \n",
+    "                 'flgE', 'flgF', 'flgG', 'flgH', 'flgI', 'flgJ', 'flhB', 'flhA', \n",
+    "                 'flhE', 'fliA', 'fliZ', 'fliY', 'fliE', 'fliF', 'fliG', 'flH',\n",
+    "                 'flhI', 'flhJ', 'flhK', 'fliL', 'fliM', 'fliN', 'fliO', 'fliP',\n",
+    "                 'fliQ', 'fliR', 'csgC', 'ymdA', 'ymdB', 'ymdC', 'yecR', 'fliD', \n",
+    "                 'fliS', 'fliT', 'ycgR', 'trg', 'flxA', 'ynjH', 'motA', 'motB',\n",
+    "                 'cheA', 'cheW', 'fliC', 'aer', 'yhjH', 'tsr', 'yjdA', 'yjcZ'],\n",
+    "         'glt':['gltI', 'gltJ', 'gltK', 'gltL'],\n",
+    "         'mal':['malG', 'malF', 'malE','malK', 'malM', 'lamB'],\n",
+    "         'his':['hisJ', 'hisQ', 'hisM', 'hisP'],\n",
+    "         'dpp': ['dppA', 'dppB', 'dppC', 'dppD'],\n",
+    "         'pot': ['potF', 'potG', 'potH', 'potI'],\n",
+    "         'nmp': ['nmpC'],\n",
+    "         'rbs': ['rbsD', 'rbsB', 'rbsA', 'rbsC'],\n",
+    "         'mgl': ['mglB', 'mglA', 'mglC'],\n",
+    "         'opp': ['oppA', 'oppB', 'oppC', 'oppD', 'oppF']}\n",
+    "\n",
+    "ribosomal = ['rpsA', 'rpsB', 'pbsC', 'rpsD', 'rpsE', 'rpsF', 'rpsG', 'rpsH', \n",
+    "             'rpsI', 'rpsJ', 'rpsK', 'rpsL', 'rpsM', 'rpsN', 'rpsO', 'rpsP',\n",
+    "             'rpsQ', 'rpsR', 'rpsS', 'rpsT', 'rpsU', 'sra', 'rplA', 'rplB',\n",
+    "             'rplC', 'rplD', 'rplE', 'rplF', 'rplJ', 'rplL', 'rplI', 'rplK', \n",
+    "             'rplM', 'rplN', 'rplO', 'rplP', 'rplQ',' rplR', 'rplS', 'rplT', \n",
+    "             'rplU', 'rplV', 'rplW', 'rplX', 'rplY', 'rpmA', 'rpmB', 'rpmC',\n",
+    "             'rpmD', 'rpmE', 'rpmF', 'rpmG', 'rpmH', 'rpmI', 'rpmJ']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute the ribosomal fractions for each growth condition\n",
+    "ribo_genes = []\n",
+    "\n",
+    "fracs = pd.DataFrame()\n",
+    "for nom, gen in genes.items():\n",
+    "    for g, d in data.groupby(['growth_medium']):\n",
+    "        total = d['reads'].sum()\n",
+    "        ko = d[d['gene_name'].isin(gen)]['reads'].sum()\n",
+    "        ribo = d[d['gene_name'].isin(ribosomal)]['reads'].sum()\n",
+    "        info = {'knockout':nom, \n",
+    "                'growth_medium':g,\n",
+    "                'total_reads': total,\n",
+    "                'ribosomal_fraction': ribo / total,\n",
+    "                'knockout_fraction': ko /total,\n",
+    "                'metabolic_fraction': (total - ribo - ko) / total\n",
+    "                } \n",
+    "        fracs = fracs.append(info, ignore_index=True) \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -62,52 +122,252 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>gene_name</th>\n",
        "      <th>growth_medium</th>\n",
-       "      <th>reads</th>\n",
+       "      <th>knockout</th>\n",
+       "      <th>knockout_fraction</th>\n",
+       "      <th>metabolic_fraction</th>\n",
+       "      <th>ribosomal_fraction</th>\n",
+       "      <th>total_reads</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1149</th>\n",
-       "      <td>hisP</td>\n",
-       "      <td>glucose</td>\n",
-       "      <td>2508</td>\n",
+       "      <th>0</th>\n",
+       "      <td>acetate</td>\n",
+       "      <td>flh</td>\n",
+       "      <td>0.163971</td>\n",
+       "      <td>0.737407</td>\n",
+       "      <td>0.098622</td>\n",
+       "      <td>21116899.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5491</th>\n",
-       "      <td>hisP</td>\n",
+       "      <th>1</th>\n",
+       "      <td>glucose</td>\n",
+       "      <td>flh</td>\n",
+       "      <td>0.071478</td>\n",
+       "      <td>0.736995</td>\n",
+       "      <td>0.191527</td>\n",
+       "      <td>12306118.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>acetate</td>\n",
-       "      <td>3193</td>\n",
+       "      <td>glt</td>\n",
+       "      <td>0.009978</td>\n",
+       "      <td>0.891399</td>\n",
+       "      <td>0.098622</td>\n",
+       "      <td>21116899.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>glucose</td>\n",
+       "      <td>glt</td>\n",
+       "      <td>0.002252</td>\n",
+       "      <td>0.806221</td>\n",
+       "      <td>0.191527</td>\n",
+       "      <td>12306118.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>acetate</td>\n",
+       "      <td>mal</td>\n",
+       "      <td>0.008909</td>\n",
+       "      <td>0.892468</td>\n",
+       "      <td>0.098622</td>\n",
+       "      <td>21116899.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>glucose</td>\n",
+       "      <td>mal</td>\n",
+       "      <td>0.004257</td>\n",
+       "      <td>0.804216</td>\n",
+       "      <td>0.191527</td>\n",
+       "      <td>12306118.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>acetate</td>\n",
+       "      <td>his</td>\n",
+       "      <td>0.001762</td>\n",
+       "      <td>0.899615</td>\n",
+       "      <td>0.098622</td>\n",
+       "      <td>21116899.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>glucose</td>\n",
+       "      <td>his</td>\n",
+       "      <td>0.001471</td>\n",
+       "      <td>0.807002</td>\n",
+       "      <td>0.191527</td>\n",
+       "      <td>12306118.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>acetate</td>\n",
+       "      <td>dpp</td>\n",
+       "      <td>0.003970</td>\n",
+       "      <td>0.897408</td>\n",
+       "      <td>0.098622</td>\n",
+       "      <td>21116899.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>glucose</td>\n",
+       "      <td>dpp</td>\n",
+       "      <td>0.002106</td>\n",
+       "      <td>0.806367</td>\n",
+       "      <td>0.191527</td>\n",
+       "      <td>12306118.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>acetate</td>\n",
+       "      <td>pot</td>\n",
+       "      <td>0.000187</td>\n",
+       "      <td>0.901191</td>\n",
+       "      <td>0.098622</td>\n",
+       "      <td>21116899.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>glucose</td>\n",
+       "      <td>pot</td>\n",
+       "      <td>0.000155</td>\n",
+       "      <td>0.808318</td>\n",
+       "      <td>0.191527</td>\n",
+       "      <td>12306118.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>acetate</td>\n",
+       "      <td>nmp</td>\n",
+       "      <td>0.058767</td>\n",
+       "      <td>0.842610</td>\n",
+       "      <td>0.098622</td>\n",
+       "      <td>21116899.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>glucose</td>\n",
+       "      <td>nmp</td>\n",
+       "      <td>0.007199</td>\n",
+       "      <td>0.801274</td>\n",
+       "      <td>0.191527</td>\n",
+       "      <td>12306118.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>acetate</td>\n",
+       "      <td>rbs</td>\n",
+       "      <td>0.018862</td>\n",
+       "      <td>0.882516</td>\n",
+       "      <td>0.098622</td>\n",
+       "      <td>21116899.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>glucose</td>\n",
+       "      <td>rbs</td>\n",
+       "      <td>0.005119</td>\n",
+       "      <td>0.803355</td>\n",
+       "      <td>0.191527</td>\n",
+       "      <td>12306118.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>acetate</td>\n",
+       "      <td>mgl</td>\n",
+       "      <td>0.004543</td>\n",
+       "      <td>0.896835</td>\n",
+       "      <td>0.098622</td>\n",
+       "      <td>21116899.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>glucose</td>\n",
+       "      <td>mgl</td>\n",
+       "      <td>0.000503</td>\n",
+       "      <td>0.807970</td>\n",
+       "      <td>0.191527</td>\n",
+       "      <td>12306118.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>acetate</td>\n",
+       "      <td>opp</td>\n",
+       "      <td>0.002830</td>\n",
+       "      <td>0.898547</td>\n",
+       "      <td>0.098622</td>\n",
+       "      <td>21116899.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>glucose</td>\n",
+       "      <td>opp</td>\n",
+       "      <td>0.000610</td>\n",
+       "      <td>0.807864</td>\n",
+       "      <td>0.191527</td>\n",
+       "      <td>12306118.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     gene_name growth_medium  reads\n",
-       "1149      hisP       glucose   2508\n",
-       "5491      hisP       acetate   3193"
+       "   growth_medium knockout  knockout_fraction  metabolic_fraction  \\\n",
+       "0        acetate      flh           0.163971            0.737407   \n",
+       "1        glucose      flh           0.071478            0.736995   \n",
+       "2        acetate      glt           0.009978            0.891399   \n",
+       "3        glucose      glt           0.002252            0.806221   \n",
+       "4        acetate      mal           0.008909            0.892468   \n",
+       "5        glucose      mal           0.004257            0.804216   \n",
+       "6        acetate      his           0.001762            0.899615   \n",
+       "7        glucose      his           0.001471            0.807002   \n",
+       "8        acetate      dpp           0.003970            0.897408   \n",
+       "9        glucose      dpp           0.002106            0.806367   \n",
+       "10       acetate      pot           0.000187            0.901191   \n",
+       "11       glucose      pot           0.000155            0.808318   \n",
+       "12       acetate      nmp           0.058767            0.842610   \n",
+       "13       glucose      nmp           0.007199            0.801274   \n",
+       "14       acetate      rbs           0.018862            0.882516   \n",
+       "15       glucose      rbs           0.005119            0.803355   \n",
+       "16       acetate      mgl           0.004543            0.896835   \n",
+       "17       glucose      mgl           0.000503            0.807970   \n",
+       "18       acetate      opp           0.002830            0.898547   \n",
+       "19       glucose      opp           0.000610            0.807864   \n",
+       "\n",
+       "    ribosomal_fraction  total_reads  \n",
+       "0             0.098622   21116899.0  \n",
+       "1             0.191527   12306118.0  \n",
+       "2             0.098622   21116899.0  \n",
+       "3             0.191527   12306118.0  \n",
+       "4             0.098622   21116899.0  \n",
+       "5             0.191527   12306118.0  \n",
+       "6             0.098622   21116899.0  \n",
+       "7             0.191527   12306118.0  \n",
+       "8             0.098622   21116899.0  \n",
+       "9             0.191527   12306118.0  \n",
+       "10            0.098622   21116899.0  \n",
+       "11            0.191527   12306118.0  \n",
+       "12            0.098622   21116899.0  \n",
+       "13            0.191527   12306118.0  \n",
+       "14            0.098622   21116899.0  \n",
+       "15            0.191527   12306118.0  \n",
+       "16            0.098622   21116899.0  \n",
+       "17            0.191527   12306118.0  \n",
+       "18            0.098622   21116899.0  \n",
+       "19            0.191527   12306118.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Set up the  dictionary of genes we care about. \n",
-    "genes = {'flh':['flhD', 'flhC',],\n",
-    "         'glt':['gltI', 'gltJ', 'gltK', 'gltL'],\n",
-    "         'mal':['malG', 'malF', 'malE','malK', 'malM', 'lamB'],\n",
-    "         'his':['hisJ', 'hisQ', 'hisM', 'hisP'],\n",
-    "         'dpp': ['dppA', 'dppB', 'dppC', 'dppD'],\n",
-    "         'pot': ['potF', 'potG', 'potH', 'potI'],\n",
-    "         'nmp': ['nmpC'],\n",
-    "         'rbs': ['rbsD', 'rbsB', 'rbsA', 'rbsC'],\n",
-    "         'mgl': ['mglB', 'mglA', 'mglC'],\n",
-    "         'opp': ['oppA', 'oppB', 'oppC', 'oppD', 'oppf']}\n",
-    "data[data['gene_name']=='hisP']\n"
+    "fracs"
    ]
   },
   {
