Added processing from 2021-07-21 and updated README from 2021-07-20

--- a/code/analysis/wildtype_expression_profiles.ipynb
+++ b/code/analysis/wildtype_expression_profiles.ipynb
@@ -2,29 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Exploring Wildtype Expression"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import numpy as np \n",
     "import pandas as pd \n",
     "import altair as alt \n",
     "import futileprot as fp \n",
     "colors, palette = fp.viz.altair_style()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Load the Balakrishan 2021 data \n",
     "data = pd.read_csv('../../data/literature/Balakrishnan2021/Balakrishnan2021_wt_rnaseq.csv')\n",
@@ -34,13 +32,13 @@
     "            inplace=True)\n",
     "data = data[['gene_name', 'glucose', 'acetate']]\n",
     "data = data.melt('gene_name', var_name='growth_medium', value_name='reads')\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
    "source": [
     "# Set up the  dictionary of genes we care about. \n",
     "genes = {'flh':['flhD', 'flhC', 'flgA', 'flgM', 'flgN', 'flgB', 'flgC', 'flgD', \n",
@@ -67,13 +65,13 @@
     "             'rplM', 'rplN', 'rplO', 'rplP', 'rplQ',' rplR', 'rplS', 'rplT', \n",
     "             'rplU', 'rplV', 'rplW', 'rplX', 'rplY', 'rpmA', 'rpmB', 'rpmC',\n",
     "             'rpmD', 'rpmE', 'rpmF', 'rpmG', 'rpmH', 'rpmI', 'rpmJ']\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
    "source": [
     "# Compute the ribosomal fractions for each growth condition\n",
     "ribo_genes = []\n",
@@ -94,15 +92,90 @@
     "        fracs = fracs.append(info, ignore_index=True) \n",
     "\n",
     "\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 7,
+   "source": [
+    "# Compute the total \"useless\" fraction for the wild type in each condition\n",
+    "total_useless = fracs.groupby(['growth_medium'])['knockout_fraction'].sum()\n",
+    "total_useless"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
+      "text/plain": [
+       "growth_medium\n",
+       "acetate    0.273780\n",
+       "glucose    0.095149\n",
+       "Name: knockout_fraction, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "fracs"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   growth_medium knockout  knockout_fraction  metabolic_fraction  \\\n",
+       "0        acetate      flh           0.163971            0.737407   \n",
+       "1        glucose      flh           0.071478            0.736995   \n",
+       "2        acetate      glt           0.009978            0.891399   \n",
+       "3        glucose      glt           0.002252            0.806221   \n",
+       "4        acetate      mal           0.008909            0.892468   \n",
+       "5        glucose      mal           0.004257            0.804216   \n",
+       "6        acetate      his           0.001762            0.899615   \n",
+       "7        glucose      his           0.001471            0.807002   \n",
+       "8        acetate      dpp           0.003970            0.897408   \n",
+       "9        glucose      dpp           0.002106            0.806367   \n",
+       "10       acetate      pot           0.000187            0.901191   \n",
+       "11       glucose      pot           0.000155            0.808318   \n",
+       "12       acetate      nmp           0.058767            0.842610   \n",
+       "13       glucose      nmp           0.007199            0.801274   \n",
+       "14       acetate      rbs           0.018862            0.882516   \n",
+       "15       glucose      rbs           0.005119            0.803355   \n",
+       "16       acetate      mgl           0.004543            0.896835   \n",
+       "17       glucose      mgl           0.000503            0.807970   \n",
+       "18       acetate      opp           0.002830            0.898547   \n",
+       "19       glucose      opp           0.000610            0.807864   \n",
+       "\n",
+       "    ribosomal_fraction  total_reads  \n",
+       "0             0.098622   21116899.0  \n",
+       "1             0.191527   12306118.0  \n",
+       "2             0.098622   21116899.0  \n",
+       "3             0.191527   12306118.0  \n",
+       "4             0.098622   21116899.0  \n",
+       "5             0.191527   12306118.0  \n",
+       "6             0.098622   21116899.0  \n",
+       "7             0.191527   12306118.0  \n",
+       "8             0.098622   21116899.0  \n",
+       "9             0.191527   12306118.0  \n",
+       "10            0.098622   21116899.0  \n",
+       "11            0.191527   12306118.0  \n",
+       "12            0.098622   21116899.0  \n",
+       "13            0.191527   12306118.0  \n",
+       "14            0.098622   21116899.0  \n",
+       "15            0.191527   12306118.0  \n",
+       "16            0.098622   21116899.0  \n",
+       "17            0.191527   12306118.0  \n",
+       "18            0.098622   21116899.0  \n",
+       "19            0.191527   12306118.0  "
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -314,68 +387,20 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "   growth_medium knockout  knockout_fraction  metabolic_fraction  \\\n",
-       "0        acetate      flh           0.163971            0.737407   \n",
-       "1        glucose      flh           0.071478            0.736995   \n",
-       "2        acetate      glt           0.009978            0.891399   \n",
-       "3        glucose      glt           0.002252            0.806221   \n",
-       "4        acetate      mal           0.008909            0.892468   \n",
-       "5        glucose      mal           0.004257            0.804216   \n",
-       "6        acetate      his           0.001762            0.899615   \n",
-       "7        glucose      his           0.001471            0.807002   \n",
-       "8        acetate      dpp           0.003970            0.897408   \n",
-       "9        glucose      dpp           0.002106            0.806367   \n",
-       "10       acetate      pot           0.000187            0.901191   \n",
-       "11       glucose      pot           0.000155            0.808318   \n",
-       "12       acetate      nmp           0.058767            0.842610   \n",
-       "13       glucose      nmp           0.007199            0.801274   \n",
-       "14       acetate      rbs           0.018862            0.882516   \n",
-       "15       glucose      rbs           0.005119            0.803355   \n",
-       "16       acetate      mgl           0.004543            0.896835   \n",
-       "17       glucose      mgl           0.000503            0.807970   \n",
-       "18       acetate      opp           0.002830            0.898547   \n",
-       "19       glucose      opp           0.000610            0.807864   \n",
-       "\n",
-       "    ribosomal_fraction  total_reads  \n",
-       "0             0.098622   21116899.0  \n",
-       "1             0.191527   12306118.0  \n",
-       "2             0.098622   21116899.0  \n",
-       "3             0.191527   12306118.0  \n",
-       "4             0.098622   21116899.0  \n",
-       "5             0.191527   12306118.0  \n",
-       "6             0.098622   21116899.0  \n",
-       "7             0.191527   12306118.0  \n",
-       "8             0.098622   21116899.0  \n",
-       "9             0.191527   12306118.0  \n",
-       "10            0.098622   21116899.0  \n",
-       "11            0.191527   12306118.0  \n",
-       "12            0.098622   21116899.0  \n",
-       "13            0.191527   12306118.0  \n",
-       "14            0.098622   21116899.0  \n",
-       "15            0.191527   12306118.0  \n",
-       "16            0.098622   21116899.0  \n",
-       "17            0.191527   12306118.0  \n",
-       "18            0.098622   21116899.0  \n",
-       "19            0.191527   12306118.0  "
       ]
      },
-     "execution_count": 19,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
-   "source": [
-    "fracs"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
@@ -383,8 +408,8 @@
    "hash": "dca0ade3e726a953b501b15e8e990130d2b7799f14cfd9f4271676035ebe5511"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
