Large update including hierarchical analysis of growth rates

--- a/code/analysis/wildtype_expression_profiles.ipynb
+++ b/code/analysis/wildtype_expression_profiles.ipynb
@@ -3,17 +3,19 @@
   {
    "cell_type": "markdown",
    "source": [
+    "\n",
     "# Exploring Wildtype Expression"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "source": [
     "import numpy as np \n",
     "import pandas as pd \n",
     "import altair as alt \n",
+    "import altair_saver\n",
     "import futileprot as fp \n",
     "colors, palette = fp.viz.altair_style()"
    ],
@@ -38,25 +40,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "source": [
     "# Set up the  dictionary of genes we care about. \n",
-    "genes = {'flh':['flhD', 'flhC', 'flgA', 'flgM', 'flgN', 'flgB', 'flgC', 'flgD', \n",
+    "genes = {'∆flh':['flhD', 'flhC', 'flgA', 'flgM', 'flgN', 'flgB', 'flgC', 'flgD', \n",
     "                 'flgE', 'flgF', 'flgG', 'flgH', 'flgI', 'flgJ', 'flhB', 'flhA', \n",
     "                 'flhE', 'fliA', 'fliZ', 'fliY', 'fliE', 'fliF', 'fliG', 'flH',\n",
     "                 'flhI', 'flhJ', 'flhK', 'fliL', 'fliM', 'fliN', 'fliO', 'fliP',\n",
     "                 'fliQ', 'fliR', 'csgC', 'ymdA', 'ymdB', 'ymdC', 'yecR', 'fliD', \n",
     "                 'fliS', 'fliT', 'ycgR', 'trg', 'flxA', 'ynjH', 'motA', 'motB',\n",
     "                 'cheA', 'cheW', 'fliC', 'aer', 'yhjH', 'tsr', 'yjdA', 'yjcZ'],\n",
-    "         'glt':['gltI', 'gltJ', 'gltK', 'gltL'],\n",
-    "         'mal':['malG', 'malF', 'malE','malK', 'malM', 'lamB'],\n",
-    "         'his':['hisJ', 'hisQ', 'hisM', 'hisP'],\n",
-    "         'dpp': ['dppA', 'dppB', 'dppC', 'dppD'],\n",
-    "         'pot': ['potF', 'potG', 'potH', 'potI'],\n",
-    "         'nmp': ['nmpC'],\n",
-    "         'rbs': ['rbsD', 'rbsB', 'rbsA', 'rbsC'],\n",
-    "         'mgl': ['mglB', 'mglA', 'mglC'],\n",
-    "         'opp': ['oppA', 'oppB', 'oppC', 'oppD', 'oppF']}\n",
+    "         '∆glt':['gltI', 'gltJ', 'gltK', 'gltL'],\n",
+    "         '∆mal':['malG', 'malF', 'malE','malK', 'malM', 'lamB'],\n",
+    "         '∆his':['hisJ', 'hisQ', 'hisM', 'hisP'],\n",
+    "         '∆dpp': ['dppA', 'dppB', 'dppC', 'dppD'],\n",
+    "         '∆pot': ['potF', 'potG', 'potH', 'potI'],\n",
+    "         '∆nmp': ['nmpC'],\n",
+    "         '∆rbs': ['rbsD', 'rbsB', 'rbsA', 'rbsC'],\n",
+    "         '∆mgl': ['mglB', 'mglA', 'mglC'],\n",
+    "         '∆opp': ['oppA', 'oppB', 'oppC', 'oppD', 'oppF']}\n",
     "\n",
     "ribosomal = ['rpsA', 'rpsB', 'pbsC', 'rpsD', 'rpsE', 'rpsF', 'rpsG', 'rpsH', \n",
     "             'rpsI', 'rpsJ', 'rpsK', 'rpsL', 'rpsM', 'rpsN', 'rpsO', 'rpsP',\n",
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "source": [
     "# Compute the ribosomal fractions for each growth condition\n",
     "ribo_genes = []\n",
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "source": [
     "# Compute the total \"useless\" fraction for the wild type in each condition\n",
     "total_useless = fracs.groupby(['growth_medium'])['knockout_fraction'].sum()\n",
@@ -116,14 +118,55 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 9
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
+   "source": [
+    "plot = alt.Chart(fracs).mark_bar().encode(\n",
+    "        x=alt.X('knockout:N', title='strain'),\n",
+    "        y=alt.Y('knockout_fraction:Q', title='transcriptome fraction',\n",
+    "                ),\n",
+    "                color=alt.Color('growth_medium:N', title='growth medium'),\n",
+    "                column=alt.Color('growth_medium:N')\n",
+    "        )\n",
+    "altair_saver.save(plot,'./wt_expression.pdf')"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "source": [
+    "phix_range = np.linspace(0, 0.2, 100)\n",
+    "theo = (1 - phix_range)**-1\n",
+    "theo_df = pd.DataFrame(np.array([phix_range, theo]).T, columns=['phix', 'fitness'])\n",
+    "theory = alt.Chart(theo_df).mark_line().encode(\n",
+    "        x=alt.X('phix:Q', title='useless expression fraction'),\n",
+    "        y=alt.Y('fitness:Q', title='fitness',  scale=alt.Scale(domain=[0.9, 1.25])))\n",
+    "\n",
+    "fracs['fitness'] = (1 - fracs['knockout_fraction'])**-1\n",
+    "pred = alt.Chart(fracs).mark_point(size=80).encode(\n",
+    "                x=alt.X('knockout_fraction:Q', title='useless expression fraction',\n",
+    "                        scale=alt.Scale(type='log', domain=[0.0001, 0.3])),\n",
+    "                y=alt.Y('fitness:Q', scale=alt.Scale(domain=[0.9, 1.25])),\n",
+    "                color=alt.Color('knockout:N', title='strain'),\n",
+    "                shape=alt.Shape('growth_medium:N', title='growth medium')\n",
+    ")\n",
+    "\n",
+    "altair_saver.save(theory + pred, './theory_pred_singleKOs.pdf')"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "source": [
     "fracs"
    ],
@@ -133,26 +176,26 @@
      "data": {
       "text/plain": [
        "   growth_medium knockout  knockout_fraction  metabolic_fraction  \\\n",
-       "0        acetate      flh           0.163971            0.737407   \n",
-       "1        glucose      flh           0.071478            0.736995   \n",
-       "2        acetate      glt           0.009978            0.891399   \n",
-       "3        glucose      glt           0.002252            0.806221   \n",
-       "4        acetate      mal           0.008909            0.892468   \n",
-       "5        glucose      mal           0.004257            0.804216   \n",
-       "6        acetate      his           0.001762            0.899615   \n",
-       "7        glucose      his           0.001471            0.807002   \n",
-       "8        acetate      dpp           0.003970            0.897408   \n",
-       "9        glucose      dpp           0.002106            0.806367   \n",
-       "10       acetate      pot           0.000187            0.901191   \n",
-       "11       glucose      pot           0.000155            0.808318   \n",
-       "12       acetate      nmp           0.058767            0.842610   \n",
-       "13       glucose      nmp           0.007199            0.801274   \n",
-       "14       acetate      rbs           0.018862            0.882516   \n",
-       "15       glucose      rbs           0.005119            0.803355   \n",
-       "16       acetate      mgl           0.004543            0.896835   \n",
-       "17       glucose      mgl           0.000503            0.807970   \n",
-       "18       acetate      opp           0.002830            0.898547   \n",
-       "19       glucose      opp           0.000610            0.807864   \n",
+       "0        acetate     ∆flh           0.163971            0.737407   \n",
+       "1        glucose     ∆flh           0.071478            0.736995   \n",
+       "2        acetate     ∆glt           0.009978            0.891399   \n",
+       "3        glucose     ∆glt           0.002252            0.806221   \n",
+       "4        acetate     ∆mal           0.008909            0.892468   \n",
+       "5        glucose     ∆mal           0.004257            0.804216   \n",
+       "6        acetate     ∆his           0.001762            0.899615   \n",
+       "7        glucose     ∆his           0.001471            0.807002   \n",
+       "8        acetate     ∆dpp           0.003970            0.897408   \n",
+       "9        glucose     ∆dpp           0.002106            0.806367   \n",
+       "10       acetate     ∆pot           0.000187            0.901191   \n",
+       "11       glucose     ∆pot           0.000155            0.808318   \n",
+       "12       acetate     ∆nmp           0.058767            0.842610   \n",
+       "13       glucose     ∆nmp           0.007199            0.801274   \n",
+       "14       acetate     ∆rbs           0.018862            0.882516   \n",
+       "15       glucose     ∆rbs           0.005119            0.803355   \n",
+       "16       acetate     ∆mgl           0.004543            0.896835   \n",
+       "17       glucose     ∆mgl           0.000503            0.807970   \n",
+       "18       acetate     ∆opp           0.002830            0.898547   \n",
+       "19       glucose     ∆opp           0.000610            0.807864   \n",
        "\n",
        "    ribosomal_fraction  total_reads  \n",
        "0             0.098622   21116899.0  \n",
@@ -207,7 +250,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>acetate</td>\n",
-       "      <td>flh</td>\n",
+       "      <td>∆flh</td>\n",
        "      <td>0.163971</td>\n",
        "      <td>0.737407</td>\n",
        "      <td>0.098622</td>\n",
@@ -216,7 +259,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>glucose</td>\n",
-       "      <td>flh</td>\n",
+       "      <td>∆flh</td>\n",
        "      <td>0.071478</td>\n",
        "      <td>0.736995</td>\n",
        "      <td>0.191527</td>\n",
@@ -225,7 +268,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>acetate</td>\n",
-       "      <td>glt</td>\n",
+       "      <td>∆glt</td>\n",
        "      <td>0.009978</td>\n",
        "      <td>0.891399</td>\n",
        "      <td>0.098622</td>\n",
@@ -234,7 +277,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>glucose</td>\n",
-       "      <td>glt</td>\n",
+       "      <td>∆glt</td>\n",
        "      <td>0.002252</td>\n",
        "      <td>0.806221</td>\n",
        "      <td>0.191527</td>\n",
@@ -243,7 +286,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>acetate</td>\n",
-       "      <td>mal</td>\n",
+       "      <td>∆mal</td>\n",
        "      <td>0.008909</td>\n",
        "      <td>0.892468</td>\n",
        "      <td>0.098622</td>\n",
@@ -252,7 +295,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>glucose</td>\n",
-       "      <td>mal</td>\n",
+       "      <td>∆mal</td>\n",
        "      <td>0.004257</td>\n",
        "      <td>0.804216</td>\n",
        "      <td>0.191527</td>\n",
@@ -261,7 +304,7 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>acetate</td>\n",
-       "      <td>his</td>\n",
+       "      <td>∆his</td>\n",
        "      <td>0.001762</td>\n",
        "      <td>0.899615</td>\n",
        "      <td>0.098622</td>\n",
@@ -270,7 +313,7 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>glucose</td>\n",
-       "      <td>his</td>\n",
+       "      <td>∆his</td>\n",
        "      <td>0.001471</td>\n",
        "      <td>0.807002</td>\n",
        "      <td>0.191527</td>\n",
@@ -279,7 +322,7 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>acetate</td>\n",
-       "      <td>dpp</td>\n",
+       "      <td>∆dpp</td>\n",
        "      <td>0.003970</td>\n",
        "      <td>0.897408</td>\n",
        "      <td>0.098622</td>\n",
@@ -288,7 +331,7 @@
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>glucose</td>\n",
-       "      <td>dpp</td>\n",
+       "      <td>∆dpp</td>\n",
        "      <td>0.002106</td>\n",
        "      <td>0.806367</td>\n",
        "      <td>0.191527</td>\n",
@@ -297,7 +340,7 @@
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>acetate</td>\n",
-       "      <td>pot</td>\n",
+       "      <td>∆pot</td>\n",
        "      <td>0.000187</td>\n",
        "      <td>0.901191</td>\n",
        "      <td>0.098622</td>\n",
@@ -306,7 +349,7 @@
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>glucose</td>\n",
-       "      <td>pot</td>\n",
+       "      <td>∆pot</td>\n",
        "      <td>0.000155</td>\n",
        "      <td>0.808318</td>\n",
        "      <td>0.191527</td>\n",
@@ -315,7 +358,7 @@
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>acetate</td>\n",
-       "      <td>nmp</td>\n",
+       "      <td>∆nmp</td>\n",
        "      <td>0.058767</td>\n",
        "      <td>0.842610</td>\n",
        "      <td>0.098622</td>\n",
@@ -324,7 +367,7 @@
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>glucose</td>\n",
-       "      <td>nmp</td>\n",
+       "      <td>∆nmp</td>\n",
        "      <td>0.007199</td>\n",
        "      <td>0.801274</td>\n",
        "      <td>0.191527</td>\n",
@@ -333,7 +376,7 @@
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>acetate</td>\n",
-       "      <td>rbs</td>\n",
+       "      <td>∆rbs</td>\n",
        "      <td>0.018862</td>\n",
        "      <td>0.882516</td>\n",
        "      <td>0.098622</td>\n",
@@ -342,7 +385,7 @@
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>glucose</td>\n",
-       "      <td>rbs</td>\n",
+       "      <td>∆rbs</td>\n",
        "      <td>0.005119</td>\n",
        "      <td>0.803355</td>\n",
        "      <td>0.191527</td>\n",
@@ -351,7 +394,7 @@
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>acetate</td>\n",
-       "      <td>mgl</td>\n",
+       "      <td>∆mgl</td>\n",
        "      <td>0.004543</td>\n",
        "      <td>0.896835</td>\n",
        "      <td>0.098622</td>\n",
@@ -360,7 +403,7 @@
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>glucose</td>\n",
-       "      <td>mgl</td>\n",
+       "      <td>∆mgl</td>\n",
        "      <td>0.000503</td>\n",
        "      <td>0.807970</td>\n",
        "      <td>0.191527</td>\n",
@@ -369,7 +412,7 @@
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>acetate</td>\n",
-       "      <td>opp</td>\n",
+       "      <td>∆opp</td>\n",
        "      <td>0.002830</td>\n",
        "      <td>0.898547</td>\n",
        "      <td>0.098622</td>\n",
@@ -378,7 +421,7 @@
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>glucose</td>\n",
-       "      <td>opp</td>\n",
+       "      <td>∆opp</td>\n",
        "      <td>0.000610</td>\n",
        "      <td>0.807864</td>\n",
        "      <td>0.191527</td>\n",
@@ -390,7 +433,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 29
     }
    ],
    "metadata": {}
